--- a/projects/task-manager/src/app/tasks/list/list-task.component.html
+++ b/projects/task-manager/src/app/tasks/list/list-task.component.html
@@ -6,18 +6,18 @@
             <th>Task</th>
             <th>Done</th>
             <th class="text-center">
-                <a class="btn btn-xs btn-success">
+                <a [routerLink]="['/tasks/create-task']" class="btn btn-xs btn-success">
                     <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New
                 </a>
             </th>
         </tr>
 
-        <tr>
-            <td>
-                
+        <tr *ngFor="let task of tasks">
+            <td [class.success]="!task.done">
+                {{ task.name }}
             </td>
             <td style="width: 70px" class="text-center">
-                <input type="checkbox">
+                <input type="checkbox" [value]="task.id" [checked]="task.done">
             </td>
             <td class="text-center" style="width: 200px">
                 <a title="Editar" alt="Editar" class="btn btn-xs btn-info">
@@ -31,4 +31,4 @@
     </tbody>
 </table>
 
-<p>No tasks found.</p>
+<p *ngIf="tasks.length==0">No tasks found.</p>
