--- a/projects/task-manager/src/app/tasks/list/list-task.component.html
+++ b/projects/task-manager/src/app/tasks/list/list-task.component.html
@@ -23,7 +23,7 @@
                 <a [routerLink]="['/tasks/edit', task.id]" title="Editar" alt="Editar" class="btn btn-xs btn-info">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
                 </a>
-                <a href="#" title="Remover" alt="Remover" class="btn btn-xs btn-danger">
+                <a href="#" title="Remove" alt="Remove" class="btn btn-xs btn-danger" (click)="remove($event, task)">
                     <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Remove
                 </a>
             </td>
