--- a/projects/tic-tac-toe/src/app/tic-tac-toe/tic-tac-toe.component.html
+++ b/projects/tic-tac-toe/src/app/tic-tac-toe/tic-tac-toe.component.html
@@ -1,1 +1,42 @@
-<p>tic-tac-toe works!</p>
+<div>
+    <h2>Tic Tac Toe</h2>
+    
+    <!-- start -->
+    <div class="principal">
+      <a href="#" 
+         class="button">
+         Start
+      </a>
+    </div><!-- start -->
+  
+    <!-- matrix -->
+    <div>
+      <ul>
+        <li class="kz-border-bottom kz-border-right"></li>
+        <li class="kz-border-bottom kz-border-right"></li>
+        <li class="kz-border-bottom"></li>
+        <li class="kz-border-bottom kz-border-right"></li>
+        <li class="kz-border-bottom kz-border-right"></li>
+        <li class="kz-border-bottom"></li>
+        <li class="kz-border-right"></li>
+        <li class="kz-border-right"></li>
+        <li></li>
+      </ul>
+    </div><!-- matrix --> 
+  
+    <!-- final -->
+    <div>
+      <span>
+      <p>You win!</p>
+      <p>You lost :(</p>
+      <p>The game finished by draw...</p>
+      <br />
+      <a href="#" 
+           class="button">
+           Play again
+        </a>
+      </span>
+    </div><!-- final -->
+  
+  </div>
+  
