update: UI; fix: Currency Service

--- a/projects/currency-converter/src/app/converter/components/converter.component.html
+++ b/projects/currency-converter/src/app/converter/components/converter.component.html
@@ -1,5 +1,5 @@
 <br/>
-<div class="alert alert-danger" role="alert">
+<div class="alert alert-danger" role="alert" *ngIf="hasError">
 	Error retrieving data. Try again.
 </div>
 <div class="panel panel-success">
@@ -7,31 +7,40 @@
 		Select the currency to be converted
 	</div>
 	<div class="panel-body text-center">
-	  <form class="form-inline">
+	  <form #convertForm="ngForm" class="form-inline">
 		<input 
 			type="text" 
 			name="valor"
 			class="form-control text-right"
 			placeholder="0" 
+            [(ngModel)]="convert.amount"
 			required>
 		<select 
-			name="moedaDe"
+			name="currencyFrom"
 			class="form-control"
+            [(ngModel)]="convert.currencyFrom"
 			required>
-			<option>
+			<option *ngFor="let currency of currencies"
+            [value]="currency.abbreviation">
+            {{ currency.abbreviation }} - {{ currency.desc }}
 			</option>
 		</select>
 		<span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
 		<select
-			name="moedaPara"
+			name="currencyTo"
 			class="form-control"
+            [(ngModel)]="convert.currencyTo"
 			required>
-			<option>
+			<option *ngFor="let currency of currencies"
+            [value]="currency.abbreviation">
+            {{ currency.abbreviation }} - {{ currency.desc }}
 			</option>
 		</select>
 		<input 
 			type="submit" 
 			value="Convert"
+            (click)="convertion()"
+            
 			class="btn btn-success">
 	  </form>
 	 </div>
