--- a/projects/currency-converter/src/app/converter/components/converter.component.html
+++ b/projects/currency-converter/src/app/converter/components/converter.component.html
@@ -14,6 +14,7 @@
 			class="form-control text-right"
 			placeholder="0" 
             [(ngModel)]="convert.amount"
+			number
 			required>
 		<select 
 			name="currencyFrom"
