feat: API connection

--- a/projects/currency-converter/src/app/converter/components/converter.component.html
+++ b/projects/currency-converter/src/app/converter/components/converter.component.html
@@ -41,7 +41,7 @@
 			type="submit" 
 			value="Convert"
             (click)="convertion()"
-            
+            [disabled]="!convertForm.form.valid"
 			class="btn btn-success">
 	  </form>
 	 </div>
