implement: Modal component for Convertion
Add a modal component that will correctly display the data retrieved from the API callback

--- a/projects/currency-converter/src/app/converter/components/converter.component.html
+++ b/projects/currency-converter/src/app/converter/components/converter.component.html
@@ -42,7 +42,14 @@
 			value="Convert"
             (click)="convertion()"
             [disabled]="!convertForm.form.valid"
+			data-toggle="modal"
+			data-target="#modalRate"
 			class="btn btn-success">
 	  </form>
 	 </div>
+	 <modal-rate [id]="'modalRate'"
+	 [response]="convertResponse"
+	 [convert]="convert"
+	 (onConfirm)="startup()">
+	 </modal-rate>
 </div>
