--- a/projects/currency-converter/src/app/converter/utils/modal-rate.component.html
+++ b/projects/currency-converter/src/app/converter/utils/modal-rate.component.html
@@ -15,7 +15,7 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="modalLabel">
-                    Rate on {{ rateDate }}
+                    Rate on {{ rateDate | dateFormat }}
                 </h4>
             </div>
             <div class="modal-body text-center">
