fix: Method name
Previously misspelled a method name from 'newQuery' to 'newQueryy'

--- a/projects/currency-converter/src/app/converter/utils/modal-rate.component.html
+++ b/projects/currency-converter/src/app/converter/utils/modal-rate.component.html
@@ -39,7 +39,7 @@
                     type="button" 
                     class="btn btn-success"
                     data-dismiss="modal"
-                    (click)="newQueryy()">
+                    (click)="newQuery()">
                     New query
                 </button>
             </div>
