--- a/projects/final-project/src/app/app.component.html
+++ b/projects/final-project/src/app/app.component.html
@@ -19,7 +19,7 @@
             Projects <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li><a href="#">Dashboard</a></li>
+            <li><a href="#" [routerLink]="['/dashboard']">Dashboard</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">Calculator</a></li>
             <li><a href="#">Currency Converter</a></li>
