--- a/projects/final-project/src/app/app.component.html
+++ b/projects/final-project/src/app/app.component.html
@@ -21,7 +21,7 @@
           <ul class="dropdown-menu">
             <li><a href="#" [routerLink]="['/dashboard']">Dashboard</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Calculator</a></li>
+            <li><a href="#" [routerLink]="['/calculator']">Calculator</a></li>
             <li><a href="#">Currency Converter</a></li>
             <li><a href="#">Task Manager</a></li>
             <li><a href="#">Tic Tac Toe</a></li>
