integration: Currency Converter

--- a/projects/final-project/src/app/app.component.html
+++ b/projects/final-project/src/app/app.component.html
@@ -22,7 +22,7 @@
             <li><a href="#" [routerLink]="['/dashboard']">Dashboard</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#" [routerLink]="['/calculator']">Calculator</a></li>
-            <li><a href="#">Currency Converter</a></li>
+            <li><a href="#" [routerLink]="['/currency-converter']">Currency Converter</a></li>
             <li><a href="#">Task Manager</a></li>
             <li><a href="#">Tic Tac Toe</a></li>
           </ul>
