integration: Task Manager

--- a/projects/final-project/src/app/app.component.html
+++ b/projects/final-project/src/app/app.component.html
@@ -23,7 +23,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="#" [routerLink]="['/calculator']">Calculator</a></li>
             <li><a href="#" [routerLink]="['/currency-converter']">Currency Converter</a></li>
-            <li><a href="#">Task Manager</a></li>
+            <li><a href="#" [routerLink]="['/tasks']">Task Manager</a></li>
             <li><a href="#">Tic Tac Toe</a></li>
           </ul>
         </li>
