--- a/projects/final-project/src/app/app.component.html
+++ b/projects/final-project/src/app/app.component.html
@@ -24,7 +24,7 @@
             <li><a href="#" [routerLink]="['/calculator']">Calculator</a></li>
             <li><a href="#" [routerLink]="['/currency-converter']">Currency Converter</a></li>
             <li><a href="#" [routerLink]="['/tasks']">Task Manager</a></li>
-            <li><a href="#">Tic Tac Toe</a></li>
+            <li><a href="#" [routerLink]="['/tic-tac-toe']">Tic Tac Toe</a></li>
           </ul>
         </li>
       </ul>
